# fyp_project

./: .directory  README.md
backend/: pyproject.toml
backend/bike_rental/: db.sqlite3
backend/bike_rental/bike_rental/: asgi.py  settings.py  urls.py  wsgi.py
backend/bike_rental/rentals/: admin.py  models.py  serializers.py  urls.py  views.py
backend/bike_rental/rentals/migrations/: 0001_initial.py
bike_frontend/my-project/: .env  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
bike_frontend/my-project/app/: layout.tsx  page.tsx
bike_frontend/my-project/app/bike/[id]/: page.tsx
bike_frontend/my-project/app/bikes/: page.tsx
bike_frontend/my-project/app/contact/: page.tsx
bike_frontend/my-project/app/context/: AuthContext.tsx
bike_frontend/my-project/app/login/: page.tsx
bike_frontend/my-project/app/profile/: page.tsx
bike_frontend/my-project/app/register/: page.tsx
bike_frontend/my-project/components/ui/: landing.tsx  navbar.tsx  review.tsx  similarbikesection.tsx
bike_frontend/my-project/lib/api/: api.ts  bikes.ts  profile.ts  recommend.ts  rent.ts  review.ts
